--- a/styles/shared/profile-summary.css
+++ b/styles/shared/profile-summary.css
@@ -33,7 +33,7 @@
   display: flex;
   flex-direction: column; /* Change from row to column for vertical layout */
   justify-content: flex-start; /* Align items at the top */
-  padding: 18px;
+  padding: 15px;
 }
 
 
@@ -59,7 +59,6 @@
   display: -webkit-box;
   -webkit-line-clamp: 5;
   -webkit-box-orient: vertical;
-  overflow: hidden;
 }
 
 .others-post {
@@ -78,4 +77,71 @@
   font-weight: bold;
   font-size: 28px;
   padding-left: calc(100vw * 0.038);
+}
+
+
+@media (max-width: 1000px) {
+  .other-information-container {
+    padding: 10px;
+  }
+
+  .profile-nickname {
+    font-size: 25px;
+  }
+  
+  .profile-username {
+    font-size: 13px;
+    margin-bottom: 8px;
+  }
+  
+  .profile-bio {
+    font-size: 15px;
+  }
+}
+
+
+@media (max-width: 700px) {
+  .other-information-container {
+    padding: 8px;
+  }
+
+  .profile-nickname {
+    font-size: 22px;
+  }
+  
+  .profile-username {
+    font-size: 10px;
+    margin-bottom: 6px;
+  }
+  
+  .profile-bio {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 650px) {
+  .other-information-container {
+    padding: 8px;
+  }
+
+  .profile-nickname {
+    font-size: 22px;
+  }
+  
+  .profile-username {
+    font-size: 10px;
+    margin-bottom: 6px;
+  }
+  
+  .profile-bio {
+    font-size: 11px;
+  }
+}
+
+@media (max-width: 500px) {
+  .main-section {
+    left: 65px;
+    width: calc(100% - 65px); /* Ensure content fits within the viewport */
+
+  }
 }
