--- a/styles/shared/sidebar.css
+++ b/styles/shared/sidebar.css
@@ -23,6 +23,26 @@
     padding: 5px;
 }
 
+.sidebar-button:hover {
+    background-color: rgb(243, 240, 240);
+    cursor: pointer;
+    border-radius: 12px;
+}
+
+.sidebar-button img {
+    height: 50%;
+    margin-bottom: 4px;  /* Space between the image and the text */
+}
+
+.sidebar-button p {
+    font-size: 100%;                                            
+    font-weight: 500;
+    text-align: center;  /* Center the text */
+    margin: 0;  /* Remove any default margin */
+}
+
+
+
 @media (max-width: 1000px) {
     .sidebar {
         width: 125px;
@@ -41,31 +61,14 @@
     }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 500px) {
     .sidebar {
         width: 65px;
     }
     .sidebar-button {
         height: 30px;
     }
-}
-
-
-
-.sidebar-button:hover {
-    background-color: rgb(243, 240, 240);
-    cursor: pointer;
-    border-radius: 12px;
-}
-
-.sidebar-button img {
-    height: 50%;
-    margin-bottom: 4px;  /* Space between the image and the text */
-}
-
-.sidebar-button p {
-    font-size: 100%;                                            
-    font-weight: 500;
-    text-align: center;  /* Center the text */
-    margin: 0;  /* Remove any default margin */
+    .sidebar-button p {
+        font-size: 90%; 
+    }
 }
